{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 138,
  "lineage": "ef217b8f-6cd4-8b14-8f91-eb439780aef1",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jumpboxec2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcc0bef51bad3cb2",
            "arn": "arn:aws:ec2:eu-west-1:476114128026:instance/i-07a649b1a5be61204",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a649b1a5be61204",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First_Lab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bd7a756d4f80005",
            "private_dns": "ip-10-0-1-4.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-52-49-209-35.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.209.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0be743ae2589e8d1f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742413f8fe26ff0d",
            "tags": {
              "Name": "Jumpboxec2instance"
            },
            "tags_all": {
              "Name": "Jumpboxec2instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0639c3ecde35c185f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.jumpbox_sg",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Privateec2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcc0bef51bad3cb2",
            "arn": "arn:aws:ec2:eu-west-1:476114128026:instance/i-0bbceade1d25006fb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbceade1d25006fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First_Lab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3e67b876fbaafa4",
            "private_dns": "ip-10-0-2-18.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083a0234a53084977",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0775e2a10481d200b",
            "tags": {
              "Name": "Privateec2instance"
            },
            "tags_all": {
              "Name": "Privateec2instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019beda998c13f014"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.jumpbox_sg",
            "module.ec2.aws_security_group.private_sg",
            "module.vpc.aws_subnet.PrivateSubnet1",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Publicec2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcc0bef51bad3cb2",
            "arn": "arn:aws:ec2:eu-west-1:476114128026:instance/i-087061128b9f4c1ea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087061128b9f4c1ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First_Lab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b394e6fa9fb40a5",
            "private_dns": "ip-10-0-1-134.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-54-247-19-33.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.19.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04bf1608ea83ef1bc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742413f8fe26ff0d",
            "tags": {
              "Name": "Publicec2instance"
            },
            "tags_all": {
              "Name": "Publicec2instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a52869f7816a1438"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.jumpbox_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpbox_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:security-group/sg-0639c3ecde35c185f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0639c3ecde35c185f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jumpbox_sg",
            "name_prefix": "",
            "owner_id": "476114128026",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:security-group/sg-019beda998c13f014",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-019beda998c13f014",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0639c3ecde35c185f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "476114128026",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.jumpbox_sg",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:security-group/sg-0a52869f7816a1438",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a52869f7816a1438",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0639c3ecde35c185f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "476114128026",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.jumpbox_sg",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:internet-gateway/igw-0f0e81aa2a639cb13",
            "id": "igw-0f0e81aa2a639cb13",
            "owner_id": "476114128026",
            "tags": {
              "Name": "ec2_igw"
            },
            "tags_all": {
              "Name": "ec2_igw"
            },
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:route-table/rtb-030435d12b60655e3",
            "id": "rtb-030435d12b60655e3",
            "owner_id": "476114128026",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:route-table/rtb-0e7a99dec17f0e3c9",
            "id": "rtb-0e7a99dec17f0e3c9",
            "owner_id": "476114128026",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0e81aa2a639cb13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_ec2",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privaterouteassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06313e7606a0dbf1c",
            "route_table_id": "rtb-030435d12b60655e3",
            "subnet_id": "subnet-0775e2a10481d200b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.Privatert",
            "module.vpc.aws_subnet.PrivateSubnet1",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrouteassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f02898887e57833",
            "route_table_id": "rtb-0e7a99dec17f0e3c9",
            "subnet_id": "subnet-0742413f8fe26ff0d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_ec2",
            "module.vpc.aws_route_table.Publicrt",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:subnet/subnet-0775e2a10481d200b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0775e2a10481d200b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114128026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:subnet/subnet-0742413f8fe26ff0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0742413f8fe26ff0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "476114128026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0798c2a254b4bf8f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476114128026:vpc/vpc-0798c2a254b4bf8f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003790b4654d114d1",
            "default_route_table_id": "rtb-07ad744edd62153d2",
            "default_security_group_id": "sg-0956fe7635b811582",
            "dhcp_options_id": "dopt-076de0121de630ce3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0798c2a254b4bf8f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ad744edd62153d2",
            "owner_id": "476114128026",
            "tags": {
              "Name": "ec2_vpc"
            },
            "tags_all": {
              "Name": "ec2_vpc"
            }
          }
        }
      ]
    }
  ]
}